--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,10 +1,15 @@
+version 0.2.6 (2018-01-10)
+- Fixed SubsetCondition
+- Fixed RunDiffExpression for non-cluster differential expression function
+- Updated ascend general vignette on how to use SubsetCondition correctlyx
+
 version 0.2.5 (2018-01-09)
 - Changed how RunDiffExpression compares datasets (subsetting of EMSets by user 
 is no longer required)
 - Updated vignette to reflect recent changes
 
 version 0.2.3 (2017-12-22)
-- Bugfix for SCESet-associated scran functions
+- Debugged SCESet-associated scran functions
 - Fixed % Variance label on PlotPCAVariance plot
 - Changed SingleCellExperiment to Suggests 
 
