--- a/vignettes/ascend_Tutorial.Rmd
+++ b/vignettes/ascend_Tutorial.Rmd
@@ -24,7 +24,7 @@ We have tested this package on datasets ranging from 100 to 20,000 cells. Genera
 This package makes extensive use of [BiocParallel](http://bioconductor.org/packages/release/bioc/html/BiocParallel.html), enabling `ascend` to make the most of your computer's hardware. As each system is different, BiocParallel needs to be configured by the user. Here are some example configurations.
 
 #### Unix/Linux/MacOS (Single Machine)
-```{r SetupNix, eval = TRUE}
+```{r SetupNix, eval = FALSE}
 library(BiocParallel)
 ncores <- parallel::detectCores() - 1
 register(MulticoreParam(workers = ncores, progressbar=TRUE), default = TRUE)
@@ -70,11 +70,16 @@ Please install these packages before installing `ascend`. You do not need to loa
 Please use `devtools` to load the development version of `ascend`.
 
 ```{r LoadDevAscend, echo = FALSE, message = FALSE}
-devtools::load_all(dirname(getwd()))
+code_dir <- dirname(getwd())
+devtools::load_all(code_dir)
+library(BiocParallel)
+ncores <- parallel::detectCores() - 1
+register(MulticoreParam(workers = ncores, progressbar=TRUE), default = TRUE)
+load(url("https://github.com/IMB-Computational-Genomics-Lab/ascend/blob/master/inst/extdata/RGC_scRNASeq.RData?raw=true"))
 ```
 
 ```{r Loadascend, eval = FALSE}
-devtools::load_all("~/CodeRepositories/ascend")
+devtools::load_all("ascend/")
 ```
 
 You can also use devtools' `install_github` function to install the package, and then load it as normal.
@@ -158,8 +163,6 @@ An `ascend` Expression and Metadata Set (EMSet) is a S4 object that stores infor
 Generally, an EMSet can be created by using the `NewEMSet` function. You can view a quick summary of this object by entering the name of the created object.
 
 ```{r LoadData, echo = FALSE}
-load("~/Data/ascend_data/extdata/RGC_scRNASeq.RData")
-
 # Quick prep of data to use as examples. Duplicate of what's done in 
 # ascend_Tutorial.md
 batch.information <- lapply(strsplit(as.character(barcodes$V1), "-"), `[`, 2)
@@ -292,7 +295,7 @@ PCA, TSNE and MDS plots depict relative distances between cells based on express
 
 Example: Colour cells by cluster
 ```{r LoadCompleteData, echo = FALSE}
-em.set <- readRDS("~/Data/ascend_data/extdata/RGC_scRNASeq.rds")
+em.set <- readRDS(url("https://github.com/IMB-Computational-Genomics-Lab/ascend/blob/master/inst/extdata/RGC_scRNASeq.rds?raw=true"))
 ```
 
 ```{r ColourByBatch}
